--- a/written/SC_model/SC_model.tex
+++ b/written/SC_model/SC_model.tex
@@ -49,7 +49,7 @@
 \begin{center}                  % Center the following lines
 {\Large Draft of new SC section} \\
 Sean Bittner \\
-November 4, 2020 \\
+November 25, 2020 \\
 \end{center}
 
 \section{Identifying neural mechanisms of flexible task switching} \label{results_SC}
@@ -77,7 +77,7 @@ Here, we use EPI to determine the changes in network connectivity $\mathbf{z} = 
 A. Rapid task switching behavioral paradigm (see text). 
 B. Model of superior colliculus (SC). Neurons: LP - left pro, RP - right pro, LA - left anti, RA - right anti. 
 Parameters: $sW$ - self, $hW$ - horizontal, $vW$ -vertical, $dW$ - diagonal weights.  
-Subscripts $P$ and $A$ of connectivity weights indicate Pro or Anti populations, and e.g. $vW_{PA}$ is a vertical weight from an Anti to a Pro population.  
+Subscripts $P$ and $A$ of connectivity weights indicate Pro or Anti populations.
 C. The marginal EPI distributions of the Schur eigenvalues at each level of task accuracy.
 D. Simulations of SC networks with parameterizations indicated by the stars in panel C.  Shading  shows standard deviations across trials.
 E. The effect of delay period inactivation on accuracy versus Schur eigenvalues.
@@ -102,8 +102,8 @@ The corresponding eigenvalues (e.g. $\lambda_{\text{task}}$, which change accord
 
 
 In agreement with experimental results form Duan et al., we found the optogenetic silencing during the delay period consistently decreased performance in the Anti task by 15-30\%, but had no consistent effect on the Pro task (Fig. \ref{fig:SC}E). 
-For example, the networks indicated by the black star suffers a steep drop in accuracy in the Anti task with delay period inactivation (Fig. \ref{fig:SC}F).  
-Networks resilient to delay period inactivation had greater $\lambda_{\text{task}}$ and $\lambda_{\text{task}}$ and lower $\lambda_{\text{all}}$ and $\lambda_{\text{side}}$ (Fig. \ref{fig:SC}E).
+For example, both networks suffer a steep drop in accuracy in the Anti task with delay period inactivation (Fig. \ref{fig:SC}F).  
+Networks resilient to delay period inactivation had greater $\lambda_{\text{task}}$ and $\lambda_{\text{side}}$ and lower $\lambda_{\text{all}}$ and $\lambda_{\text{diag}}$ (Fig. \ref{fig:SC}E).
 
 \section{Supplementary}\label{methods_SC}
 \begin{equation}
@@ -174,15 +174,15 @@ B. Task accuracy vs. Schur eigenvalue.}
 \label{fig:SC_Eigs}
 \end{figure}
 
-
-\begin{figure}
-\begin{center}
-\includegraphics[scale=0.6]{figs/figSX2.pdf}
-\end{center}
-\caption{\small
-Same as Fig. 1C shaded by Anti task accuracy.}
-\label{fig:SC_EPI2}
-\end{figure}
+%
+%\begin{figure}
+%\begin{center}
+%\includegraphics[scale=0.6]{figs/figSX2.pdf}
+%\end{center}
+%\caption{\small
+%Same as Fig. 1C shaded by Anti task accuracy.}
+%\label{fig:SC_EPI2}
+%\end{figure}
 
 
 \bibliography{epi}
